--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,11 +21,10 @@
   <% @score.each do|score|%>
     <% if score.published == 1 %>
       <div>
-        <%= score.played_date %><br>
+        <%= score.user.name %><br>
         <%= score.golfcourse.golfcoursename %><br>
+        <%= score.played_date %><br>
         <%= score.total_score %><br>
-        スタートホール：<%= score.start_hole %>H<br>
-
         <%= link_to "スコア詳細", archives_show_path(id: score.id) %>  
       </div>
     <% end %>
