--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <header>
-  <p class="red text-primary">ここからヘッダー</p>
-  <%= link_to "トップにもどる", root_path %>
-  <p class="blue">ここまでヘッダー</p>
+<h1 id="eagle">
+ここはヘッダーだよ
+</h1>
+<%= link_to "トップにもどる", root_path %>
 </header>
