--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,17 +4,12 @@
     <title>Golfscore</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%#= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%#= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%#= stylesheet_link_tag 'application' %>
-    <%#= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%#= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%#= javascript_pack_tag 'application' %>
+
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%#= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="body_bg">
+  <body>
     <%= render 'layouts/header' %>
     <%= render 'layouts/flash.scores' %>
      
