--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -1,4 +1,4 @@
-<h1>過去のスコアを解析</h1>
+<h1>過去のスコアをみれます。</h1>
 <div>
   <h2>完了したラウンド</h2>
 
@@ -8,7 +8,7 @@
     <%= submit_tag '検索' %>
   <% end %>
 
-  <% if params[:played_year] == '0' %>
+  <% if params[:played_year] == '' %>
     <p>対象期間：全期間</p>
   <% else %>
     <p>対象期間：<%= params[:played_year] %></p>
@@ -20,22 +20,14 @@
   <% end %>
   <p>ラウンド数：<%= @count = @scores_search.count.to_i %></p>
   <% @ave = @sum.to_f / @count.to_f %>
-  <% if @count == 0 %>
-    <h5>該当するデータがありません。</h5>
-  <% else %>
-    <p>平均スコア：<%= sprintf("%+8.2f", @ave) %></p>
-  <% end %>
-
+  <p>平均：<%= @ave.round(1) %></p>
+  
   <% @array = [] %>
-  <% if @array == [] %>
-  <% else %>
-    <% @scores_search.each do|score| %>
-      <% @array.push(score.total_score.to_i) %>
-    <% end %>
-    <p>ベストスコア：<%= format('%+d', @array.min) %></p>
-    <p>ワーストスコア：<%= format('%+d', @array.max) %></p>
+  <% @scores_search.each do|score| %>
+    <% @array.push(score.total_score.to_i) %>
   <% end %>
-
+  <p>ベストスコア：<%= @array.min %></p>
+  <p>ワーストスコア：<%= @array.max %></p>
 
     <% @played_course_count.each do|score| %>
     <%= score[0] %>
@@ -48,10 +40,10 @@
     <% if score.status == 1 %>
       <div>
         <%= score.played_date %><br>
+        <%= score.played_date.year %><br>
         <%= score.golfcourse.golfcoursename %><br>
-        <%= score.total_score %><br>
         スタートホール：<%= score.start_hole %>H<br>
-
+        <%= score.total_score %><br>
         <% if score.published == 1%>
           <span>公開</span><br>
         <% else %>
