--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,21 +1,53 @@
-<h1>SOLOGOL</h1>
-
-<div>
+<h1>Live Score</h1>
+<p>お一人様ゴルフを楽しく！</p>
+<div class="grid-6">
   <% if user_signed_in? %>
-    <%= link_to "ログアウト", destroy_user_session_path, method: :get %><br>
-    <div>あなたのニックネーム:<%= current_user.name %></div><br>
+    <%= link_to "ログアウト", destroy_user_session_path, method: :get %><br />
+    <div>あなたのニックネーム:<%= current_user.name %></div><br />
   <% else %>
-    <%= link_to "ログイン", new_user_session_path, class: 'post' %><br>
-    <%= link_to "新規登録", new_user_registration_path, class: 'post' %><br>
-    <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post %><br>
+    <%= link_to "ログイン", new_user_session_path, class: 'post' %><br />
+    <%= link_to "サインアップ", new_user_registration_path, class: 'post' %><br />
+    <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post %><br />
+    <%= link_to "ラウンドする", golfcourses_search_path %>
   <% end %>
 </div>
 
-<%= render 'top_menu'%>
+<% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
+  <%#= link_to "ラウンドする", select_course_path %><br />
+  <%= link_to "掲示板を覗く", messages_index_path %><br />
+  <%= link_to "過去のスコアを見る", archives_index_path, played_year: '0', commit: '検索' %><br />
+  <%= link_to "プレイヤー検索", user_index_path %><br />
+  <%= link_to "マイページ", mypage_path %><br />
+  <%= link_to "ラウンドする", golfcourses_search_path %><br />
+<% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
+  <%#= link_to "ラウンドする", select_course_path %><br />
+  <%= link_to "掲示板を覗く", messages_index_path %><br />
+  <%= link_to "プレイヤー検索", user_index_path %><br />
+  <%= link_to "ラウンドする", golfcourses_search_path %><br />
 
-<%= render 'playing_round'%>
+<% end %>
 
-<%= render 'following_timeline'%>
+<time>今日は<%= @day %>です</time><br>
 
+
+
+<% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
+  <h2>あなたは、サインイン中でゲストプレイヤーでもないですね。</h2>
+  <% if @unfinshed_score.nil? %>
+    <h2>プレイ中のラウンドはありません。</h2>
+  <% else %>
+    <h2>プレイ中のラウンド</h2>
+    <% @unfinshed_score.each do|score| %>
+      <%= score.played_date%>
+      <%= link_to score.golfcourse.golfcoursename, score_path(id: score.id)%>
+      <%= score.total_score%><br>
+    <% end %>
+  <% end %>
+<% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
+  <h2>あなたは、サインイン中でゲストプレイヤーですね。</h2>
+  <%# <h2>ゲストログインだから、何も表示しないよ</h2> %>
+<% else %>
+  <h2>ログアウト中ですね</h2>  
+<% end %>
 
 <%= session.to_hash %>
