--- a/app/views/plays/edit.html.erb
+++ b/app/views/plays/edit.html.erb
@@ -8,7 +8,7 @@
 <button id="birdie">Birdie</button>
 <button id="par">Par</button>
 <button id="boggy">Boggy</button>
-<button id="double-Boggy">Double-Boggy</button>
-<button id="triple-boggy">Triple-Boggy</button><br>
+<button id="double_boggy">Double-Boggy</button>
+<button id="triple_boggy">Triple-Boggy</button><br>
 
 <p><%= link_to "スコアカードを見る", score_path(id: @score.id) ,hole_number: params[:hole_number] %></p>
