--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
-/*
+    /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
@@ -13,16 +13,35 @@
  *= require_tree .
  *= require_self
  */
-
-h1 {
-    font-size: 20px;
-}
-
-.thmb {
-    width: 300px;
-    display: block;
-}
-
-h1 {
-    color: red;
-}
+    
+    h1 {
+        font-size: 20px;
+    }
+    
+    .thmb {
+        width: 300px;
+        display: block;
+    }
+    
+    h1 {
+        color: red;
+    }
+    
+    // 共通↓
+    .header-logo-image {
+        width: 200px;
+    }
+    
+    .avatar-img {
+        width: 70px;
+        height: 70px;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+    
+    body {
+        background-image: url('golf-bg.jpg');
+        background-size: cover;
+    }
+    
+    // 共通↑
