--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,17 @@
 <header>
-<h1>
-ここはヘッダーだよ
-</h1>
-<%= link_to "トップにもどる", root_path %>
-<%= image_tag('logo-01.svg') %>
+  <%= link_to image_tag('logo-01.svg', class: "header-logo-image"), root_path  %>
 </header>
+<% if current_user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
+    <%= image_tag current_user.avatar.url, class: "avatar-img" %><!-- userインスタンスの画像ファイルのURLを取得し表示 -->
+<% end %>
+<div>
+  <% if user_signed_in? %>
+    <p><%= current_user.name %></p>
+    <p><%= current_user.email %></p>
+    <%= link_to "ログアウト", destroy_user_session_path, method: :get %><br>
+  <% else %>
+    <%= link_to "ログイン", new_user_session_path, class: 'post' %><br>
+    <%= link_to "新規登録", new_user_registration_path, class: 'post' %><br>
+    <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post %><br>
+  <% end %>
+</div>
