--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,20 +1,48 @@
 <header>
-<% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
   <%= link_to image_tag('logo-01.svg', class: "header-logo-image"), root_path  %>
-<% if current_user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
-    <%= image_tag current_user.avatar.url, class: "avatar-img" %><!-- userインスタンスの画像ファイルのURLを取得し表示 -->
-<% end %>
-  <% end %>
-<div>
-  <% if user_signed_in? %>
-    <p><%= current_user.name %></p>
-    <p><%= current_user.email %></p>
-    <%= link_to "ログアウト", destroy_user_session_path, method: :get %><br>
+  <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
+    <% if current_user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
+      <%= image_tag current_user.avatar.url, class: "avatar-img 
+                                                      btn
+                                                      btn-secondary
+                                                      dropdown-toggle", 
+                                                      'data-toggle': "dropdown", 
+                                                      'aria-haspopup': "true", 
+                                                      'aria-expanded': "false", 
+                                                      id: "dropdown1", 
+                                                      type: "button" %>
+    <% end %>
+    <div class="dropdown-menu" aria-labelledby="dropdown1">
+      <p class="dropdown-item"><%= current_user.name %></p>
+      <p class="dropdown-item"><%= current_user.email %></p>
+      <%= link_to "ログアウト", destroy_user_session_path, method: :get, class: "dropdown-item" %><br>
+    </div>
+  <% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
+    <% if current_user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
+      <%= image_tag current_user.avatar.url, class: "avatar-img 
+                                                      btn
+                                                      btn-secondary
+                                                      dropdown-toggle", 
+                                                      'data-toggle': "dropdown", 
+                                                      'aria-haspopup': "true", 
+                                                      'aria-expanded': "false", 
+                                                      id: "dropdown1", 
+                                                      type: "button" %>
+    <% end %>
+    <div class="dropdown-menu" aria-labelledby="dropdown1">
+      <p><%= current_user.name %></p>
+      <%= link_to "ログアウト", destroy_user_session_path, method: :get %><br>
+    </div>
   <% else %>
     <%= link_to "ログイン", new_user_session_path, class: 'post' %><br>
     <%= link_to "新規登録", new_user_registration_path, class: 'post' %><br>
     <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post %><br>
   <% end %>
-</div>
-
 </header>
+
+
+<%# <button type="button" id="dropdown1" %>
+      <%# class="btn btn-secondary dropdown-toggle" %>
+      <%# data-toggle="dropdown" %>
+      <%# aria-haspopup="true" %>
+      <%# aria-expanded="false"> %>
