--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,30 +1,44 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-.topmenu-list {
+.topMenu-list {
     display: flex;
     justify-content: space-between;
     width: 800px;
-    margin: 0 auto;
+    margin: 50px auto;
 }
 
-.topmenu-image__title {
+.topMenu-image__title {
     width: 150px;
 }
 
-.news-list {
+.headerBlock {
+    margin: 0px 30px 70px 30px;
+}
+
+.newsList {
     display: flex;
     justify-content: space-around;
 }
 
-.unfinished_list,
-.follwing_play_list {
+.unfinishedList,
+.follwingPlayList {
     background-color: white;
     width: 45%;
     display: flex;
     justify-content: space-around;
 }
 
-.news-list__image {
+.newsList__image {
     width: 80px;
+}
+
+.authBlock {
+    .authBlock__btn {
+        width: 50%;
+        height: 50px;
+        line-height: 37px;
+        margin: 20px auto;
+        display: block;
+    }
 }
