--- a/app/views/home/_following_timeline.html.erb
+++ b/app/views/home/_following_timeline.html.erb
@@ -1,5 +1,5 @@
-<div class="follwing_play_list">
-<%= image_tag('cap-02.svg', class: "news-list__image", id: "test") %>
+<div class="follwingPlayList">
+<%= image_tag('cap-02.svg', class: "newsList__image", id: "test") %>
 <div>
   <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
     <% puts 'あなたは、サインイン中でゲストプレイヤーでもないです。' %>
