--- a/app/views/home/_playing_round.html.erb
+++ b/app/views/home/_playing_round.html.erb
@@ -1,5 +1,5 @@
-<div class="unfinished_list">
-<%= image_tag('putter-02.svg', class: "news-list__image") %>
+<div class="unfinishedList">
+<%= image_tag('putter-02.svg', class: "newsList__image") %>
 <div>
 <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
   <% puts 'あなたは、サインイン中でゲストプレイヤーでもないです。' %>
