--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,17 @@
 <%= render 'top_menu'%>
 
 <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
-<div class="news-list">
-  <%= render 'playing_round'%>
-  <%= render 'following_timeline'%>
-</div>
+  <div class="newsList">
+    <%= render 'playing_round'%>
+    <%= render 'following_timeline'%>
+  </div>
 <% end %>
 
+<% unless user_signed_in? %>
+  <div class="authBlock">
+    <%= link_to "ログイン", new_user_session_path, class: 'btn btn-outline-primary authBlock__btn' %><br>
+    <%= link_to "新規登録", new_user_registration_path, class: 'btn btn-outline-success authBlock__btn' %><br>
+    <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: "btn btn-outline-warning authBlock__btn" %><br>
+  </div>
+<% end %>
 <%= session.to_hash %>
