--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,13 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= render 'layouts/header' %>
-    <%= render 'layouts/flash.scores' %>
-
-    <%= yield %>
-    <%= debug(params) if Rails.env.development? %>
-    <%= session.to_hash %>
+  <body class="backGround__img">
+    <div class="bgOpacity">
+      <%= render 'layouts/header' %>
+      <%= render 'layouts/flash.scores' %>
+      <%= yield %>
+      <%= debug(params) if Rails.env.development? %>
+      <%= session.to_hash %>
+    </div>
   </body>
 </html>
