画像表示できないを修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,7 @@
 }
 
 .backGround__img {
-    background-image: url('golf-bg.jpg');
+    background-image: image-url('golf-bg.jpg');
     background-size: cover;
 }
 
