--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,13 @@
  */
 
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
+a:hover {
+    text-decoration: none;
+    font-style: italic;
+    font-weight: 800;
+}
+
 .headerBlock__avatar {
     width: 300px;
     margin-top: 10px;
@@ -28,6 +35,11 @@
     padding: 0;
     float: right;
     margin: 10px 50px 0px 0px;
+    font-family: 'Kosugi Maru', sans-serif;
+}
+
+body {
+    font-family: 'Kosugi Maru', sans-serif;
 }
 
 .backGround__img {
