--- a/app/views/mypages/edit.html.erb
+++ b/app/views/mypages/edit.html.erb
@@ -1,34 +1,34 @@
 
-<h1> マイページ編集</h1>
-<p>ニックネーム</p>
-<%= @user.name %>
-<p>メールアドレス</p>
-<%= @user.email %>
-<p>自己紹介</p>
-<%= @user.introduction %>
+<div class="mypageEdit-block">
+  <div class="mypageEdit-block__flex">
+    <div class="mypageEdit-block__leftsideBlock">
+      <% if @user.avatar? %>  
+        <%= image_tag @user.avatar.url,class: "mypageEdit-block__avatar" %>
+      <% else %>
+        <img src="/assets/ball.svg" class="mypageEdit-block__avatar">
+      <% end %>
+      <p>プロフィール画像</p>
+    </div>
+    <div class="mypageEdit-block__rightsideBlock">
+      <%= form_with(model: @user, local: true, class: "userForm") do |f| %>
+        <div class="userForm__child">
+          <%= f.label :name, "プレイヤー名", class: "form_label" %>
+          <%= f.text_field :name, class: "form_input"  %>
+        </div>
+        <div class="userForm__child">
+        <%= f.label :introduction, '自己紹介文', class: "form_label" %>
+        <%= f.text_area :introduction, class: " form_input form_textarea" %>
+        </div>
+        <div class="userForm__child">
+        <%= f.label :avatar, "プロフィール画像", class: "form_label" %>
+        <%= f.file_field :avatar, class: "form_input"  %>
+        <%= f.hidden_field :avatar_cache %>
+        </div>
 
-<% if @user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
-  <p>
-    <strong>プロフィール画像</strong>
-    <%= image_tag @user.avatar.url %><!-- userインスタンスの画像ファイルのURLを取得し表示 -->
-  </p>
-<% end %>
+        <%= f.submit "編集する", class: "form_submit_button" %>
+      <% end %>  
+      <%= link_to "戻る", mypage_path %>
+    </div>
+  </div>
+</div>
 
-
-<%= form_with(model: @user, local: true) do |f| %>
-  <%= f.label :name, 'ニックネーム' %>
-  <%= f.text_field :name %><br>
-
-
-  <%= f.label :introduction, '自己紹介文' %>
-  <%= f.text_area :introduction %><br>
-
-  <%= f.label :avatar %>
-  <%= f.file_field :avatar %>
-
-
-  <%= f.submit "編集する" %>
-
-<% end %>
-
-<%= link_to "トップにもどる", root_path %>
