--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
       <%= render 'layouts/header' %>
       <%= render 'layouts/flash.scores' %>
       <%= yield %>
-      <%= debug(params) if Rails.env.development? %>
-      <%= session.to_hash %>
+      <%#= debug(params) if Rails.env.development? %>
+      <%#= session.to_hash %>
     </div>
   </body>
 </html>
