--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,25 @@
-<h1>プレイヤー検索</h1>
 
-<%= form_tag(user_index_path,:method => 'get') do %>
+<div class="user-Serach">
+<h1>プレイヤー検索</h1>
+<%= form_tag(user_index_path,:method => 'get', class: "user-Serach__form") do %>
   <%= text_field_tag :search %>
   <%= submit_tag 'Search', :name => nil %>
 <% end %>
-
+<ul>
 <% if @users == [] %>
 <p>該当するユーザーはいません。</p>
 <% else %>
   <% @users.each do |user| %>
-    <%= link_to user.name, user_path(id: user.id) %><br>
+    <li class="user-Serach__list">
+      <% if user.avatar? %>  <!-- アップロード画像がある場合に実行する -->
+      <%= image_tag user.avatar.url, class: "avatar-img"%>
+    <% else %>
+      <img src="/assets/ball.svg" class="avatar-img">
+    <% end %>
+      <span class="user-Serach__list__span"><%= link_to user.name, user_path(id: user.id), class: "user-Serach__list__name" %></span>
+    </li>
   <% end %>
 <% end %>  
-<%= paginate @users %>
-
-
-
-
- <%= link_to "トップにもどる", root_path %>
+</ul>
+<%= paginate @users, theme: 'twitter-bootstrap-4'%>
+</div>
