--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
   <%= text_field_tag :search %>
   <%= submit_tag 'Search', :name => nil %>
 <% end %>
-<ul>
+<ul class="user-Serach__ul">
 <% if @users == [] %>
 <p>該当するユーザーはいません。</p>
 <% else %>
