--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,8 +3,12 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .user-Serach {
     display: block;
-    width: 500px;
+    width: 600px;
     margin: 0 auto;
+    .user-Serach__ul {
+        margin: 10px auto;
+        padding: 0;
+    }
     .user-Serach__list {
         display: flex;
         justify-content: center;
