--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,12 +44,7 @@ body {
 
 .backGround__img {
     background-image: image-url('golf-bg.jpg');
-    background-size: cover;
-}
-
-.bgOpacity {
-    height: 100%;
-    background: rgba(255, 255, 255, 0.4);
+    // background-size: cover;
 }
 
 .thmb {
