--- a/app/views/scores/_leader_board.html.erb
+++ b/app/views/scores/_leader_board.html.erb
@@ -29,6 +29,8 @@
       </td>
       <% if score.start_hole == 10 %>
         <td>*</td>
+       <% else %>
+        <td></td>
       <% end %>
       <% s = score.total_score %>
     <% else %>
