--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -3,7 +3,9 @@
   <div class="mypage-block__flex">
     <div class="mypage-block__leftsideBlock">
       <% if @user.avatar? %>  
-        <%= image_tag @user.avatar.url,class: "mypage-block__avatar" %><
+        <%= image_tag @user.avatar.url,class: "mypage-block__avatar" %>
+        <% else %>
+        <img src="/assets/ball.svg" class="mypage-block__avatar">
       <% end %>
       <p class="mypage-block__name"><%= @user.name %></p>
       <p class="mypage-block__email"><%= @user.email %></p>
