スコア入力ページに前のホールへ戻る機能追加

--- a/app/assets/stylesheets/plays.scss
+++ b/app/assets/stylesheets/plays.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Plays controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.play-edit {
+    .play-edit_form {
+        width: 200px;
+        height: 200px;
+        font-size: 100px;
+        text-align: center;
+    }
+}
