--- a/app/views/plays/edit.html.erb
+++ b/app/views/plays/edit.html.erb
@@ -1,14 +1,15 @@
+<div class="play-edit">
+  <h2><%= params[:hole_number] %>Hのスコアを入力</h2>
+  <%#= @score.send("hole#{params[:hole_number]}_score") %>
 
-<h2><%= params[:hole_number] %>Hのスコアを入力</h2>
-<%= @score.send("hole#{params[:hole_number]}_score") %>
 
-<%= render "form" %>
+  <button id="eagle">Eagle</button>
+  <button id="birdie">Birdie</button>
+  <button id="par">Par</button>
+  <%= render "form" %>
+  <button id="boggy">Boggy</button>
+  <button id="double_boggy">Double-Boggy</button>
+  <button id="triple_boggy">Triple-Boggy</button><br>
 
-<button id="eagle">Eagle</button>
-<button id="birdie">Birdie</button>
-<button id="par">Par</button>
-<button id="boggy">Boggy</button>
-<button id="double_boggy">Double-Boggy</button>
-<button id="triple_boggy">Triple-Boggy</button><br>
-
-<p><%= link_to "スコアカードを見る", score_path(id: @score.id) ,hole_number: params[:hole_number] %></p>
+  <p><%= link_to "スコアカードを見る", score_path(id: @score.id) ,hole_number: params[:hole_number] %></p>
+</div>
