--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,7 +43,7 @@ body {
 }
 
 .backGround__img {
-    background-image: image-url('golf-bg.jpg');
+    // background-image: image-url('golf-bg.jpg');
     // background-size: cover;
 }
 
