--- a/app/views/plays/_form.html.erb
+++ b/app/views/plays/_form.html.erb
@@ -1,12 +1,14 @@
-<%= form_with url: play_path(id: @score.id), method: :patch do|f| %>
+<%= form_with url: play_path(id: @score.id), method: :patch, class: "play-edit__buttonGroup" do|f| %>
   
   <% last_hole = params[:hole_number].to_i - 1 %>
   <% if @score.start_hole.to_i == 1 && params[:hole_number].to_i == 1 %>
+    <a class="play-edit__airButton" ></a>
   <% elsif @score.start_hole.to_i == 10 && params[:hole_number].to_i == 10 %>
+    <a class="play-edit__airButton ></a>
   <% elsif @score.start_hole.to_i == 10 && params[:hole_number].to_i == 1 %>
-    <%= link_to "前のホールへ戻る", plays_edit_path(score_id: @score.id, hole_number: 18) %>
+    <%= link_to "前のホールへ", plays_edit_path(score_id: @score.id, hole_number: 18), class: "play-edit__holeButton"  %>
   <% else %>
-    <%=  link_to "前のホールへ戻る", plays_edit_path(score_id: @score.id, hole_number: last_hole) %>
+    <%=  link_to "前のホールへ", plays_edit_path(score_id: @score.id, hole_number: last_hole), class: "play-edit__holeButton"  %>
   <% end %>
 
   <% if @score.send("hole#{params[:hole_number]}_score") == nil %>
@@ -16,10 +18,10 @@
   <% end %>
   <%= hidden_field_tag :hole_number, params[:hole_number] %>
   <% if @score.start_hole == 1 && params[:hole_number].to_i == 18 %>
-    <%= f.submit "入力してラウンドを完了する" %>
+    <%= f.submit "入力してラウンドを完了する", class: "play-edit__holeButton"  %>
   <% elsif @score.start_hole == 10 && params[:hole_number].to_i == 9 %>
-    <%= f.submit "入力してラウンドを完了する" %>
+    <%= f.submit "入力してラウンドを完了する", class: "play-edit__holeButton"  %>
   <% else %>  
-    <%= f.submit "次のホールへ" %>
+    <%= f.submit "次のホールへ", class: "play-edit__holeButton" %>
   <% end %>
 <% end %>
